# slfl

./: README.md  pyproject.toml
src/sfl/: __main__.py
src/slfl/: _dsl.py
src/slot_machine/: __init__.py  __main__.py
tests/e2e/: test_cli.py
tests/example_proj/sample/: tasks.py
tests/unit/dsl/: test_dsl.py
tests/unit/engine/: memory_fakes.py  test_runner.py  test_traversal.py
