[project]
name = "slot-machine"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "alexjuda", email = "alexanderjuda@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"slot-machine" = "slot_machine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slot_machine"]