[project]
name = "slot-machine"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "alexjuda", email = "alexanderjuda@gmail.com" }
]
dependencies = [
    "ruamel-yaml>=0.18.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"slot-machine" = "slot_machine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "freezegun>=1.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slot_machine"]
